# ST-DGMRF

./: advection_difussion.py  constants.py  dgmrf.py  inference.py  inference_new.py  main.py  main_old.py  notes.py  preprocess_dataset.py  pyproject.toml  requirements.txt  temporal_model.py  test.py  test_MPS.py  test_training.py  utils.py  vi.py
dataset/advection_diffusion/: adjacency_matrix.pt  degree_matrix.pt  graph_data_0.pickle  graph_data_1.pickle  graph_data_10.pickle  graph_data_11.pickle  graph_data_12.pickle  graph_data_13.pickle  graph_data_14.pickle  graph_data_15.pickle  graph_data_16.pickle  graph_data_17.pickle  graph_data_18.pickle  graph_data_19.pickle  graph_data_2.pickle  graph_data_3.pickle  graph_data_4.pickle  graph_data_5.pickle  graph_data_6.pickle  graph_data_7.pickle  graph_data_8.pickle  graph_data_9.pickle  graph_y_0.pt  graph_y_1.pt  graph_y_10.pt  graph_y_11.pt  graph_y_12.pt  graph_y_13.pt  graph_y_14.pt  graph_y_15.pt  graph_y_16.pt  graph_y_17.pt  (+12 more)
layers/: flex.py  linear.py  temporal.py
results/: best_spatial_params.pt  best_temporal_params.pt  best_vi_params.pt  noise_std.pt  post_mean_model.pt  post_mean_model_2_0_1000_10_3_3.pt  post_mean_model_2_0_1_10_3_3.pt  post_mean_model_2_1_1000_100_0_3.pt  post_mean_model_2_1_1000_10_0_3.pt  post_mean_model_2_1_1000_10_2_3.pt  post_mean_model_2_1_100_10_0_4.pt  post_mean_model_2_1_1_1_0_4.pt  post_mean_model_2_2_1000_1_2_3.pt  post_mean_model_2_2_1_1_2_3.pt  post_mean_model_2_3_1000_10_2_3.pt  post_mean_model_2_3_1_1_2_3.pt  post_mean_model_2_4_1000_100_0_3.pt
wandb/: latest-run
(+25 files in other folders)
