[tool.poetry]
name = "graph-dgmrf"
version = "0.1.0"
description = ""
authors = ["SilasFriby <silasfriby@gmail.com>"]
readme = "README.md"
packages = [{include = "graph_dgmrf"}]

[tool.poetry.dependencies]
python = ">=3.9,<3.12"
numpy = "1.24.2"
torch = "^2.2.1"
wandb = "^0.16.3"
matplotlib = "^3.8.3"
scikit-learn = "^1.4.1.post1"
scipy = "^1.12.0"
networkx = "^3.2.1"
torch-geometric = "^2.5.0"
igraph = "^0.11.4"


[[tool.poetry.source]]
name = "pytorch"
url = "https://download.pytorch.org/whl/nightly/cpu"
priority = "explicit"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
